@@ -92,7 +92,7 @@ Skeletons' health bugs. Some have over 20000 hps.
 Going down from underwater tunnel level 3 in WMode crashes.
 "Stone stones"
 Bodyparts hit by sound or energy are never severed nor destroyed, so they can reach negative hps.
-Consuming chests probably crashes the game.
+//Consuming chests probably crashes the game.
 Go seems to be slower than manual walking.
 Strength bonus is shown in the battle info screen even for Bill's wills.
 (example of the problem) If you generate a sign in the script future random palms may overwrite the sign. 
