@@ -27,7 +27,7 @@ class ROOM
   virtual bool ConsumeItem(character*, item*, ushort);
   virtual bool AllowDropGifts() const { return false; }
   virtual void TeleportSquare(character*, lsquare*);
-  virtual bool DestroyTerrain(character*, olterrain*);
+  virtual bool CheckDestroyTerrain(character*, olterrain*);
   virtual bool AllowSpoil() const { return false; }
 );
 
@@ -59,8 +59,9 @@ class ROOM
   virtual bool Dip(character*) const;
   virtual bool HasDipHandler() const { return true; }
   virtual void TeleportSquare(character*, lsquare*);
-  virtual bool DestroyTerrain(character*, olterrain*);
+  virtual bool CheckDestroyTerrain(character*, olterrain*);
   virtual bool AllowSpoil() const { return false; }
+  virtual void DestroyTerrain(character*, olterrain*);
  protected:
   virtual void VirtualConstructor(bool);
   bool Entered;
@@ -79,7 +80,7 @@ class ROOM
   virtual bool ConsumeItem(character*, item*, ushort);
   virtual bool AllowDropGifts() const { return false; }
   virtual void TeleportSquare(character*, lsquare*);
-  virtual bool DestroyTerrain(character*, olterrain*);
+  virtual bool CheckDestroyTerrain(character*, olterrain*);
 );
 
 #endif
