@@ -909,7 +909,13 @@ void level::Explosion(character* Terrorist, const std::string& DeathMsg, vector2
 	    Square->GetStack()->ReceiveDamage(Terrorist, Damage, FIRE);
 
 	    if(Damage >= 20 && Square->GetOLTerrain()->CanBeDug() && Square->GetOLTerrain()->GetMainMaterial()->GetStrengthValue() < 100)
-	      Square->GetOLTerrain()->Break();
+	      {
+		room* Room = Square->GetRoomClass();
+		if(Room)
+		    Room->DestroyTerrain(Terrorist, Square->GetOLTerrain());
+
+		Square->GetOLTerrain()->Break();
+	      }
 	  }
       }
 
