@@ -37,3 +37,9 @@ roomprototype::roomprototype(room* (*Cloner)(bool), const std::string& ClassId) 
 {
   Index = protocontainer<room>::Add(this);
 }
+
+void room::DestroyTerrain(character* Who, olterrain* Destroyed)
+{
+  if(Master)
+    Who->Hostility(Master);
+}
