@@ -1106,8 +1106,8 @@ Dungeon NEW_ATTNAM;
 
 		Room 0;
 		{
-			Pos=10,10;
-			Size=20,20;
+			Pos=2,2;
+			Size=17,16;
 			WallSquare=solidterrain(FLOOR),STONE wall(BRICK_FINE);
 			FloorSquare=solidterrain(FLOOR),empty;
 			GenerateDoor = false;
@@ -1117,34 +1117,30 @@ Dungeon NEW_ATTNAM;
 			OTerrainMap
 			{
 				Pos=2,2;
-				Size=16,16;
+				Size=13,12;
 				Types
 				{
 					# = GOLD wall(BRICK_FINE);
 				}
 			}
 			{
-				................
-				................
-				..############..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#####.######..
-				................
-				................
+				.............
+				.............
+				..#########..
+				..#.......#..
+				..#.......#..
+				..#.......#..
+				..#.......#..
+				..#.......#..
+				..#.......#..
+				..####.####..
+				.............
+				.............
 			}
 			CharacterMap
 			{
 				Pos=2,2;
-				Size=16,16;
+				Size=13,12;
 				Types
 				{
 					# = 0;
@@ -1152,27 +1148,23 @@ Dungeon NEW_ATTNAM;
 				}
 			}
 			{
-				................
-				................
-				..############..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#....I.....#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..#..........#..
-				..############..
-				................
-				................
+				.............
+				.............
+				..#########..
+				..#.......#..
+				..#.......#..
+				..#...I...#..
+				..#.......#..
+				..#.......#..
+				..#.......#..
+				..#########..
+				.............
+				.............
 			}
 			GTerrainMap
 			{
 				Pos=2,2;
-				Size=16,16;
+				Size=13,12;
 				Types
 				{
 					# = 0;
@@ -1180,29 +1172,25 @@ Dungeon NEW_ATTNAM;
 				}
 			}
 			{
-				................
-				................
-				..############..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..#__________#..
-				..############..
-				................
-				................				
+				.............
+				.............
+				..#########..
+				..#_______#..
+				..#_______#..
+				..#_______#..
+				..#_______#..
+				..#_______#..
+				..#_______#..
+				..####_####..
+				.............
+				.............
 			}
 		}
-		Square, Pos 20, 30;
+		Square, Pos 9, 18;
 		{
 			OTerrain = sign { Text = "former temple of Silva"; }
 		}
-		Square, Pos 19, 29;
+		Square, Pos 10, 17;
 		{
 			OTerrain = GOLD door;
 		}
@@ -1224,10 +1212,6 @@ Dungeon NEW_ATTNAM;
 		{
 			Character=bananagrower;
 			Times=40;
-		}
-		Square, Pos 25,30;
-		{
-			Character = oree { Team = 1; }
 		}
 	}
 }
@@ -1358,11 +1342,16 @@ Dungeon UNDER_WATER_TUNNEL;
 			AttachRequired = true;
 		}
 
-		Square, BoundedRandom 61, 1, 78, 18, NOT_WALKABLE|ATTACHABLE;
+		Room 0;
 		{
-			OTerrain = link(STAIRS_UP) { AttachedArea = WORLD_MAP; AttachedEntry = UNDER_WATER_TUNNEL_EXIT; }
-			EntryIndex = STAIRS_UP;
-			AttachRequired = true;
+			Size=6,5;
+			FloorSquare=solidterrain(GRASS_TERRAIN),empty;
+			Square, Pos 3,2;
+			{
+				Character=genedrixvesana;
+				OTerrain = link(STAIRS_UP) { AttachedArea = WORLD_MAP; AttachedEntry = UNDER_WATER_TUNNEL_EXIT; }
+				EntryIndex = STAIRS_UP;				
+			}
 		}
 	}
 }
