@@ -1,4 +1,4 @@
-AC_INIT(Main/Source/area.cpp)
+AC_INIT(Main/Source/main.cpp)
 
 AM_PROG_AS 
 AC_CANONICAL_TARGET
@@ -8,7 +8,7 @@ AC_PROG_CC
 AC_PROG_CXX
 
 dnl Check for SDL
-SDL_VERSION=1.0.0
+SDL_VERSION=1.2.0
 AM_PATH_SDL($SDL_VERSION,
             :,
             AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
@@ -16,8 +16,9 @@ AM_PATH_SDL($SDL_VERSION,
 
 CFLAGS="$CFLAGS $SDL_CFLAGS "
 LIBS="$LIBS $SDL_LIBS"
-CPPFLAGS="$SDL_CFLAGS -DDATADIR=\\\"$datadir\\\" -DUSE_SDL -DGCC"
-#"@datadir\@"
+
+CPPFLAGS="$SDL_CFLAGS -DHIGH_SCORE_FILENAME=\\\"@localstatedir@/ivan-highscore.scores\\\" -DDATADIR=\\\"$datadir\\\" -DUSE_SDL -DGCC"
+
 AC_PROG_INSTALL
 
 AC_PROG_RANLIB
