@@ -1,3 +1,9 @@
+November 7 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Linux version improvements (now seems to function like a proper program)
+	* Genedrix Vesana added to tunnel
+	* Shopkeeper now offers his remaining money if he doesn't afford the full price
+
 November 1 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Belt of carrying added
